methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:23: error: value grey is not a member of object java.awt.Color
setCouleurBrosse(Color.grey)
                       ^