methods.picture.PictureMono1.scala.code
def faireV(){
  avance();
  avance();
  baisseBrosse();
  leveBrosse();
  avance();
  gauche();
  avance();
  baisseBrosse();
  leveBrosse();
	droite();
  avance();
  droite();
  avance();
  baisseBrosse();
  leveBrosse();
  gauche();
  avance();
  avance();
  gauche();
}

setCouleurBrosse(Color.grey)
for(i<-1 to 4){
  faireV()
}